# trezor-firmware

common/defs/bitcoin/: ufo.json
common/protob/: messages-bitcoin.proto  messages-management.proto  messages-zcash.proto
core/: Makefile  SConscript.firmware  SConscript.unix
core/embed/extmod/rustmods/: modtrezororchardlib.c
core/embed/rust/: Cargo.toml  librust.h  librust_qstr.h
core/embed/rust/src/: lib.rs
core/embed/rust/src/micropython/: buffer.rs  obj.rs
core/embed/rust/src/orchardlib/: mod.rs  orchard_bridge.rs  pallas_bridge.rs  sinsemilla.rs
core/embed/rust/src/trezorhal/: display.rs
core/embed/rust/src/ui/: animation.rs  display.rs  geometry.rs
core/embed/rust/src/ui/component/text/: layout.rs
core/embed/rust/src/ui/model_t1/: theme.rs
core/embed/rust/src/ui/model_tr/: layout.rs  theme.rs
core/embed/rust/src/ui/model_tr/component/: button.rs  loader.rs  result_popup.rs
core/embed/rust/src/ui/model_tt/: layout.rs
core/embed/rust/src/ui/model_tt/component/: dialog.rs  number_input.rs
core/src/: all_modules.py
core/src/apps/: base.py  workflow_handlers.py
core/src/apps/bitcoin/sign_tx/: bitcoin.py  helpers.py
core/src/apps/homescreen/: homescreen.py
core/src/apps/zcash/: f4jumble.py  get_address.py  hasher.py  signer.py  unified_addresses.py
core/src/apps/zcash/orchard/: commitments.py  generators.py  key_components.py  keychain.py  note.py  note_encryption.py  pallas.py  signer.py  (+1 more)
core/src/trezor/: messages.py
core/src/trezor/enums/: RequestType.py  ZcashMACType.py  __init__.py
core/tests/: test_apps.zcash.unified_addresses.py
docs/ci/: jobs.md
python/src/trezorlib/: btc.py  messages.py
tests/ui_tests/: fixtures.json
tools/: check-bitcoin-only
(+4 files in other folders)
