[package]
name = "trezor_lib"
version = "0.1.0"
authors = ["SatoshiLabs <info@satoshilabs.com>"]
edition = "2021"
build = "build.rs"

[features]
default = ["model_tt"]
bitcoin_only = []
model_tt = ["touch"]
model_t1 = ["buttons"]
model_tr = ["buttons"]
micropython = []
protobuf = ["micropython"]
ui = []
ui_debug = []
buttons = []
touch = []
clippy = []
debug = ["ui_debug"]
test = ["cc", "glob", "micropython", "protobuf", "ui", "ui_debug"]

[lib]
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"
split-debuginfo = "unpacked"

[profile.release]
panic = "abort"
opt-level = "z"
lto = true
codegen-units = 1

[profile.test]
split-debuginfo = "unpacked"

# Runtime dependencies

[dependencies.cty]
version = "0.2.2"

[dependencies.heapless]
version = "0.7.3"
default_features = false

[dependencies.cstr_core]
version = "0.2.4"
default_features = false

[dependencies.ff]
version = "0.12"
default-features = false

[dependencies.group]
version = "0.12"
default-features = false

[dependencies.pasta_curves]
#git = "https://github.com/jarys/pasta_curves"
#branch = "unboxed_closures"
path = "/home/agi/code/pasta_curves"
default-features = false

[dependencies.orchard]
#git = "https://github.com/jarys/orchard"
#branch = "alloc-3-plus"
path = "/home/agi/code/orchard"
default_features = false
optional = true

# Build dependencies

[build-dependencies.bindgen]
version = "0.60.1"
default_features = false
features = ["runtime"]

# Build dependencies used for linking the test binary

[build-dependencies.cc]
optional = true
version = "1.0.69"

[build-dependencies.glob]
optional = true
version = "0.3.0"
